Add new sections (gallery-info, blog-info)

--- a/blog-info.html
+++ b/blog-info.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section id="header" class="blog-bg">
+    <section id="header" class="info-gallery">
         <div class="container">
             <div class="social-media">
                 <div class="row justify-content-between">
@@ -23,21 +23,21 @@
                         <div class="ms-4">
                             <a href="mailto:info@gmail.com">
                                 <span>info@gmail.com</span>
-                                <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
+                                <img src="imgs/icons/dark-mail.svg" alt="mail-icon" class="img-fluid">
                             </a>
                         </div>
                         <div>
                             <a href="tel:+966023114564">
                                 <span>+966 023 11 4564</span>
-                                <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
+                                <img src="imgs/icons/dark-phone.svg" alt="phone-icon" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6 text-start social-media-icons d-none d-md-block">
-                        <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
-                        <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
-                        <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
-                        <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-Instagram.svg" alt="Instagram-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-Facebook.svg" alt="Facebook-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -102,91 +102,92 @@
                     </ul>
                 </div>
                 <a class="navbar-brand d-none d-lg-block" href="index.html">
-                    <img src="./imgs/logo.png" alt="logo">
+                    <img src="./imgs/icons/dark-logo.png" alt="logo">
                 </a>
             </nav>
-            <div class="headerContent">
-                <h1>المدونة</h1>
-            </div>
         </div>
     </section>
 
-    <section id="our-gallery">
+    <section id="info-gallery">
         <div class="container">
-            <div class="filter-text">
-                <span class="active">تسويق</span>
-                <span>تصميم</span>
-                <span>محاسبة</span>
-                <span>تحليل</span>
-                <span>أعمال</span>
-                <span>منوع</span>
-                <span>أخبار</span>
-            </div>
-            <div class="search">
-                <input type="text" placeholder="البحث" class="form-control">
-                <button>ابحث</button>
-            </div>
-            <div class="main-block">
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
+            <h1 class="text-center">ماذا تعرف عن دراسة الجدوى؟</h1>
+            <div class="row gy-5 justify-content-between first-row">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="first-row-block">
+                        <h4>حول المشروع</h4>
+                        <span>2 أسبوع / برمجة موقع 2023/9/13</span>
                     </div>
                 </div>
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="first-row-block">
+                        <h4>العمل المٌنجز</h4>
+                        <span>التصميم المبدئي / Seo برمجة الموقع النهائي</span>
                     </div>
                 </div>
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
-                </div>
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="first-row-block">
+                        <h4>دورنا</h4>
+                        <span>التصميم / محركات البحث البرمجة</span>
                     </div>
                 </div>
             </div>
-            <div class="text-center"><button class="read-more">اقرأ المزيد</button></div>
-            <div class="search-2">
-                <h5>انـضـم لـنـشـرتـنـا الـبـريـديـة</h5>
-                <p>مقالات غنية بالمعلومات المفيدة</p>
-                <div>
-                    <input type="text" placeholder="البحث" class="form-control">
-                    <button>ابحث</button>
+            <div class="row second-row gy-4">
+                <img src="imgs/video-photo.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img">
+                <p class="col-12">
+                    كيفية عمل دراسة الجدوى الاقتصادية تعد من أهم الخطوات التي يجب إتخاذها، وذلك عند القيام بأي مشروع.
+                    <br />
+                    لأنها هى التي تقدم لصاحب المشروع كافة المعلومات التي يحتاج لها، لكي تجيب عن تساؤلات كثيرة من شأنها
+                    أن يعرف هل هذا
+                    المشروع سوف ينجح أم لا.
+                    ونظراً لأن دراسات الجدوى مكلفة الثمن وخاصة ً لمن يبدأ في مشروع جديد صغير، وحرصاً من موقع مقال على
+                    تقديم كل ما هو جديد
+                    ومفيد.
+                    <br><br>
+                    كيفية عمل دراسة الجدوى لأي مشروع بالخطوات <br>
+                    تعتبر دراسة الجدوى هى الأساس الذى يضمن لأي مشروع إستمراره. <br>
+                    لأنها توفر كافة المعلومات عن ما يحتاج إليه من تسويق وعمليات فنية ومالية، ويتم ذلك من خلال عدة نقاط
+                    هي كالتالي. <br>
+                    أولاً الدراسة الخاصة بالسوق<br>
+                </p>
+                <ul>
+                    <li>تتم الدراسة الخاصة بالسوق من خلال عدة نقاط أساسية، وهي كالأتي.</li>
+                    <li>حيث يتم هذا من خلال عمل دراسة كاملة عن العملاء المستهدفين.</li>
+                    <li>كذلك مدى استيعاب السوق للكميات المطلوبة سواء للخدمة أو المنتج.</li>
+                    <li>وما هى التوقعات المستقبلية لزيادة أو نقصان الكميات على طلب السلعة أو الخدمة، والتي يقدمها
+                        المشروع.</li>
+                    <li>عمل مقارنة دقيقة في الأسواق بين السلعة او الخدمة المعروضة، وبين ما يتم استهلاكه بالفعل من
+                        العملاء.</li>
+                    <li>بالإضافة إلى فهم كافة الأساليب التي يتبعها المنافسين بين بعضهم البعض.</li>
+                    <li>معرفة كل ما يتعلق بالخدمة أو المنتج من جودة وأسلوب في التوزيع.</li>
+                    <li>كذلك التعرف على كيفية التسويق له وما هى الأسعار التي تم وضعها من المنافسين ؟</li>
+                </ul>
+                <img src="imgs/blog-2.webp" class="img-fluid col-12" alt="img">
+            </div>
+            <div class="row-three">
+                <h2>اقرأ المزيد</h2>
+                <div class="row gy-5">
+                    <div class="col-lg-6 col-12">
+                        <div class="row-three-block">
+                            <img src="imgs/gallery-info-1.webp" class="img-fluid" alt="img">
+                            <div>
+                                <h5>شركة الغامدي للمقاولات</h5>
+                                <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة
+                                    الحلول التقنية والتسويقية والمتابعة الدورية.</p>
+                            </div>
+                            <a href="#">اقرأ المزيد</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-12">
+                        <div class="row-three-block">
+                            <img src="imgs/gallery-info-2.webp" class="img-fluid" alt="img">
+                            <div>
+                                <h5>شركة الغامدي للمقاولات</h5>
+                                <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة
+                                    الحلول التقنية والتسويقية والمتابعة الدورية.</p>
+                            </div>
+                            <a href="#">اقرأ المزيد</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
