--- a/gallery.html
+++ b/gallery.html
@@ -123,7 +123,7 @@
                 <span>أخبار</span>
             </div>
             <div class="main-block-gallery">
-                <div class="gallery-block">
+                <a href="info-gallery.html" class="gallery-block">
                     <figure>
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
@@ -134,8 +134,8 @@
                             التقنية والتسويقية والمتابعة
                             الدورية.</p>
                     </div>
-                </div>
-                <div class="gallery-block active">
+                </a>
+                <a href="info-gallery.html" class="gallery-block active">
                     <figure class="d-lg-none d-block">
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
@@ -150,8 +150,8 @@
                     <figure class="d-lg-block d-none">
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
-                </div>
-                <div class="gallery-block">
+                </a>
+                <a href="info-gallery.html" class="gallery-block">
                     <figure>
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
@@ -162,7 +162,7 @@
                             التقنية والتسويقية والمتابعة
                             الدورية.</p>
                     </div>
-                </div>
+                </a>
                 <button>المزيد</button>
             </div>
         </div>
