--- a/info-gallery.html
+++ b/info-gallery.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <section id="header" class="blog-bg">
+    <section id="header" class="info-gallery">
         <div class="container">
             <div class="social-media">
                 <div class="row justify-content-between">
@@ -23,21 +23,21 @@
                         <div class="ms-4">
                             <a href="mailto:info@gmail.com">
                                 <span>info@gmail.com</span>
-                                <img src="imgs/icons/mail.svg" alt="mail-icon" class="img-fluid">
+                                <img src="imgs/icons/dark-mail.svg" alt="mail-icon" class="img-fluid">
                             </a>
                         </div>
                         <div>
                             <a href="tel:+966023114564">
                                 <span>+966 023 11 4564</span>
-                                <img src="imgs/icons/phone.svg" alt="phone-icon" class="img-fluid">
+                                <img src="imgs/icons/dark-phone.svg" alt="phone-icon" class="img-fluid">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6 text-start social-media-icons d-none d-md-block">
-                        <img src="imgs/icons/Instagram.svg" alt="Instagram-icon" class="img-fluid">
-                        <img src="imgs/icons/Facebook.svg" alt="Facebook-icon" class="img-fluid">
-                        <img src="imgs/icons/icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
-                        <img src="imgs/icons/Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-Instagram.svg" alt="Instagram-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-Facebook.svg" alt="Facebook-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-icons8-twitterx 1.svg" alt="twitterx-icon" class="img-fluid">
+                        <img src="imgs/icons/dark-Linked-In.svg" alt="Linked-In-icon" class="img-fluid">
                     </div>
                 </div>
             </div>
@@ -82,10 +82,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="gallery.html">معرض الأعمال</a>
+                            <a class="nav-link active" href="gallery.html">معرض الأعمال</a>
                         </li>
                         <li class=" nav-item">
-                            <a class="nav-link active" href="blog.html">المدونة</a>
+                            <a class="nav-link" href="blog.html">المدونة</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact-us.html">اتصل بنا</a>
@@ -102,91 +102,98 @@
                     </ul>
                 </div>
                 <a class="navbar-brand d-none d-lg-block" href="index.html">
-                    <img src="./imgs/logo.png" alt="logo">
+                    <img src="./imgs/icons/dark-logo.png" alt="logo">
                 </a>
             </nav>
-            <div class="headerContent">
-                <h1>المدونة</h1>
-            </div>
         </div>
     </section>
 
-    <section id="our-gallery">
+    <section id="info-gallery">
         <div class="container">
-            <div class="filter-text">
-                <span class="active">تسويق</span>
-                <span>تصميم</span>
-                <span>محاسبة</span>
-                <span>تحليل</span>
-                <span>أعمال</span>
-                <span>منوع</span>
-                <span>أخبار</span>
-            </div>
-            <div class="search">
-                <input type="text" placeholder="البحث" class="form-control">
-                <button>ابحث</button>
-            </div>
-            <div class="main-block">
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
+            <h1 class="text-center">الموقع الالكتروني لشركة الغامدي</h1>
+            <div class="row gy-5 justify-content-between first-row">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="first-row-block">
+                        <h4>حول المشروع</h4>
+                        <span>2 أسبوع / برمجة موقع 2023/9/13</span>
                     </div>
                 </div>
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="first-row-block">
+                        <h4>العمل المٌنجز</h4>
+                        <span>التصميم المبدئي / Seo برمجة الموقع النهائي</span>
                     </div>
                 </div>
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
-                    </div>
-                </div>
-                <div class="block">
-                    <div class="top d-flex align-items-end">
-                        <button>تحليل</button>
-                        <button>تسويق</button>
-                    </div>
-                    <div class="bottom">
-                        <h4>دراسة الجدوى الاقتصادية</h4>
-                        <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص حقيقي
-                            سيزود لاحقاً، هذا النص هو نص
-                            تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
-                        <a href="blog-info.html">اقرأ المزيد</a>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="first-row-block">
+                        <h4>دورنا</h4>
+                        <span>التصميم / محركات البحث البرمجة</span>
                     </div>
                 </div>
             </div>
-            <div class="text-center"><button class="read-more">اقرأ المزيد</button></div>
-            <div class="search-2">
-                <h5>انـضـم لـنـشـرتـنـا الـبـريـديـة</h5>
-                <p>مقالات غنية بالمعلومات المفيدة</p>
-                <div>
-                    <input type="text" placeholder="البحث" class="form-control">
-                    <button>ابحث</button>
+            <div class="row second-row gy-4">
+                <img src="imgs/info-gallery-img.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img">
+                <p class="col-12">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                    العربى، حيث
+                    يمكنك أن تولد مثل هذا
+                    النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد
+                    أكبر من الفقرات
+                    يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد
+                    النص العربى مفيد
+                    لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم
+                    الموقع.ومن هنا وجب على
+                    المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على
+                    المصمم عناء البحث عن نص
+                    بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على
+                    أي تصميم دون مشكلة
+                    فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.
+                </p>
+                <img src="imgs/second-row-img-1.webp" class="img-fluid col-6" alt="img">
+                <img src="imgs/second-row-img-2.webp" class="img-fluid col-6" alt="img">
+                <img src="imgs/second-row-img-3.webp" class="img-fluid col-12" alt="img">
+                <img src="imgs/second-row-img-5.webp" class="img-fluid col-6" alt="img">
+                <img src="imgs/second-row-img-4.webp" class="img-fluid col-6" alt="img">
+                <p class="last-p">
+                    هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث
+                    يمكنك أن تولد مثل هذا
+                    النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.إذا كنت تحتاج إلى عدد
+                    أكبر من الفقرات
+                    يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد، النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد
+                    النص العربى مفيد
+                    لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير من الأحيان أن يطلع على صورة حقيقية لتصميم
+                    الموقع.ومن هنا وجب على
+                    المصمم أن يضع نصوصا مؤقتة على التصميم ليظهر للعميل الشكل كاملاً،دور مولد النص العربى أن يوفر على
+                    المصمم عناء البحث عن نص
+                    بديل لا علاقة له بالموضوع الذى يتحدث عنه التصميم فيظهر بشكل لا يليق.هذا النص يمكن أن يتم تركيبه على
+                    أي تصميم دون مشكلة
+                    فلن يبدو وكأنه نص منسوخ، غير منظم، غير منسق، أو حتى غير مفهوم. لأنه مازال نصاً بديلاً ومؤقتاً.
+                </p>
+            </div>
+            <div class="row-three">
+                <h2>مشاريع أخرى</h2>
+                <div class="row gy-5">
+                    <div class="col-lg-6 col-12">
+                        <div class="row-three-block">
+                            <img src="imgs/gallery-info-1.webp" class="img-fluid" alt="img">
+                            <div>
+                                <h5>شركة الغامدي للمقاولات</h5>
+                                <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة
+                                    الحلول التقنية والتسويقية والمتابعة الدورية.</p>
+                            </div>
+                            <a href="#">اقرأ المزيد</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-12">
+                        <div class="row-three-block">
+                            <img src="imgs/gallery-info-2.webp" class="img-fluid" alt="img">
+                            <div>
+                                <h5>شركة الغامدي للمقاولات</h5>
+                                <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة
+                                    الحلول التقنية والتسويقية والمتابعة الدورية.</p>
+                            </div>
+                            <a href="#">اقرأ المزيد</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
