--- a/blog-info.html
+++ b/blog-info.html
@@ -112,28 +112,21 @@
         <div class="container">
             <h1 class="text-center">ماذا تعرف عن دراسة الجدوى؟</h1>
             <div class="row gy-5 justify-content-between first-row">
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="first-row-block">
-                        <h4>حول المشروع</h4>
-                        <span>2 أسبوع / برمجة موقع 2023/9/13</span>
+                <div class="first-row-blog gap-5">
+                    <div class="first-row-blog-blog">
+                        <span>الكاتب: أ.محمد</span>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="first-row-block">
-                        <h4>العمل المٌنجز</h4>
-                        <span>التصميم المبدئي / Seo برمجة الموقع النهائي</span>
+                    <div class="first-row-blog-blog">
+                        <span class="mb-md-5 d-block">2023/9/13</span>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="first-row-block">
-                        <h4>دورنا</h4>
-                        <span>التصميم / محركات البحث البرمجة</span>
+                    <div class="first-row-blog-blog">
+                        <span>استشاري مالي</span>
                     </div>
                 </div>
             </div>
             <div class="row second-row gy-4">
                 <img src="imgs/video-photo.webp" class="col-12 img-fluid info-gallery-img" alt="info-gallery-img">
-                <p class="col-12">
+                <p class="col-12 mb-0">
                     كيفية عمل دراسة الجدوى الاقتصادية تعد من أهم الخطوات التي يجب إتخاذها، وذلك عند القيام بأي مشروع.
                     <br />
                     لأنها هى التي تقدم لصاحب المشروع كافة المعلومات التي يحتاج لها، لكي تجيب عن تساؤلات كثيرة من شأنها
@@ -147,7 +140,7 @@
                     تعتبر دراسة الجدوى هى الأساس الذى يضمن لأي مشروع إستمراره. <br>
                     لأنها توفر كافة المعلومات عن ما يحتاج إليه من تسويق وعمليات فنية ومالية، ويتم ذلك من خلال عدة نقاط
                     هي كالتالي. <br>
-                    أولاً الدراسة الخاصة بالسوق<br>
+                    أولاً الدراسة الخاصة بالسوق
                 </p>
                 <ul>
                     <li>تتم الدراسة الخاصة بالسوق من خلال عدة نقاط أساسية، وهي كالأتي.</li>
@@ -161,31 +154,136 @@
                     <li>معرفة كل ما يتعلق بالخدمة أو المنتج من جودة وأسلوب في التوزيع.</li>
                     <li>كذلك التعرف على كيفية التسويق له وما هى الأسعار التي تم وضعها من المنافسين ؟</li>
                 </ul>
+                <p>قد يهمك : كيفية حساب الربح والخسارة لمشروع صغير</p>
                 <img src="imgs/blog-2.webp" class="img-fluid col-12" alt="img">
+                <p class="mt-5 mb-3">ثانياً – دراسة النواحي الفنية للمشروع</p>
+                <ul>
+                    <li>وتتم باتباع خطوات معينة وهي كما يأتي.</li>
+                    <li>لابد من التحديد الدقيق لأصول المشروع الثابتة.</li>
+                    <li>وكذلك معرفة ما يناسبه من موقع حتى يتم إنشائه، وما سوف يلزم له من معدات أو مواد لبنائه.</li>
+                    <li>عمل دراسة دقيقة لكل ما سوف يحتاج إليه المشروع من مواد أوليه.</li>
+                    <li>وكذلك العمال والمرافق العامة التي يجب أن تتوافر به.</li>
+                    <li>دراسة العملية الإنتاجية للمشروع، من حيث المراحل الخاصة بالانتاج وصولاً الى عملية تخزين البضائع
+                        وما هى الدورة الخاصة
+                        بالإنتاج.</li>
+                    <li>وهل هناك كم معين لا بد من إنتاجه ؟ وما هى هذه الكمية ؟</li>
+                </ul>
+                <p class="mb-0">
+                    ثالثاً – دراسة مالية خاصة بالمشروع <br>
+                    هذه الدراسة المالية تتم من خلال عدد من النقاط الأساسية وهى. <br>
+                    النقطة الأولى <br>
+                    هي التي يتم فيها دراسة كل التكاليف التي سوف يحتاج إليها المشروع، و نجدها تنقسم إلى ما يلي. <br>
+                    تكاليف التأسيس <br>
+                </p>
+                <ul>
+                    <li>وهى مجموعة التكاليف التي سوف يحتاج إليها المشروع في بداياته.</li>
+                    <li>وخاصة فيما يرتبط بالرسوم المدفوعة فى استخراج الأوراق الرسمية والتراخيص.</li>
+                    <li>وكذلك الإستشارات وهي مصروفات لن يتم إسترجاعها بعد ذلك.</li>
+                </ul>
+                <p>تكاليف خاصة برأس المال</p>
+                <p class="m-0">
+                    وتشمل المكان الذي سوف يقام عليها المشروع والمعدات التي سوف تقوم بالإنتاج. <br>
+                    كما إنها هي مصروفات يمكن استرجاعها إذا تم بيعها مرة أخرى. <br>
+                    تكاليف تشغيلية <br>
+                    وهي الخاصة بالمكان التي يتم فيها إنتاج المشروع. <br>
+                    كما يتم حساباتها خلال عام واحد من دورة المشروعات الإنتاجية. <br>
+                    تكاليف ثابتة <br>
+                </p>
+                <ul>
+                    <li>وهي المتعلقة بما سوف يتم إنفاقه لقيام المشروع.</li>
+                    <li>كما إنها هى لا تتغير حتى وإن كان المشروع قد زاد في الإنتاج.</li>
+                    <li>ومثال على ذلك إيجار المكان وكذلك الصيانة الدورية، بالإضافة إلى رواتب العمال.</li>
+                </ul>
+                <p class="mb-0">تكاليف متغيرة</p>
+                <ul>
+                    <li>وهى مرتبطة بالنسبة التي يقوم بها المشروع بالإنتاج.</li>
+                    <li>تلك التي تعد متغيرة حسب الحجم الذي يتم إنتاجه من السلعة.</li>
+                    <li>كذلك تشمل المواد الخام المستخدمة في الإنتاج وأجور العمال والفواتير، والتي يتم دفعها الخاصة
+                        بالمرافق العامة.</li>
+                </ul>
+                <p class="mb-0">اقرأ أيضًا : كيفية عمل دراسة جدوي ناجحة لمشروع في 5 خطوات فقط</p>
+                <span>النقطة الثانية</span>
+                <ul>
+                    <li>يتم في هذه المرحلة عمل عدة حسابات، مثل الإيراد الشهري والكمية التي تم بيعها.</li>
+                    <li>وكذلك التكلفة الشهرية للتشغيل، وأيضاً الربح الذي تم تحقيقه في شهر كامل.</li>
+                    <li>وآخر ما سوف نقوم بتقديمه في هذا المقال الشامل.</li>
+                    <li>وهو أن نؤكد على أن كل ما قمنا بتقديمه ليس بالضرورة يمكن أن يتم تطبيقه لكل مشروع.</li>
+                    <li>كما إن هناك مشاريع لا تتطلب كل هذه الخطوات وفقكم الله جميعاً.</li>
+                </ul>
+                <p class="mb-0">
+                    معلومات عن دراسة الجدوى <br>
+                    أنواع دراسات الجدوى الاقتصادية
+                </p>
+                <ul>
+                    <li>حظي موضوع دراسات الجدوى الاقتصادية بالاهتمام لدورها الكبير في تحقيق الاستخدام والتوزيع الأمثل
+                        للموارد الاقتصادية
+                        المتاحة.</li>
+                    <li>كما إن هناك علاقة وثيقة بين دراسات الجدوى الاقتصادية وطبيعة القرارات الاستثمارية.</li>
+                    <li>حيث إن كلما اعتمد القرار على دراسات شاملة ودقيقة وموضوعية وعلمية، كلما كانت القرارات أكثر نجاحاً
+                        وأماناً في تحقيق
+                        الأهداف.</li>
+                </ul>
+                <span class="m-0">أولاً: دراسات الجدوى الأوليـّة.</span>
+                <ul>
+                    <li>دراسات الجدوى الأوليّة وهي عبارة عن دراسة أو تقرير أوّلي يمثّل الخطوط العامة عن كافة جوانب
+                        المشروع أو المشروعات
+                        المقترحة.</li>
+                    <li>تلك التي يمكن من خلالها التوصّل إلى اتخاذ قرار إما بالتخلي عن المشروع أو الانتقال إلى دراسة أكثر
+                        تفصيلاً.</li>
+                    <li>كما إن نتيجة لهذه الدراسة يتم التخلي عن المشروع أو الانتقال إلى الدراسة التفصيلية.</li>
+                </ul>
+                <span class="m-0">ثانياً: دراسات الجدوى التفصيليّة.</span>
+                <ul>
+                    <li>دراسات الجدوى التفصيليّة: عبارة عن دراسات لاحقة لدراسات الجدوى الأولية، ولكنها أكثر تفصيلاً ودقة
+                        وشمولية منها.</li>
+                    <li>وهي بمثابة تقرير مفصّل يشمل كافة جوانب المشروع المقترح، والتي على أساسها تستطيع الادارة العليا
+                        أن تتخذ قرارها.
+                    <li class="me-5">إما بالتخلي عن المشروع نهائياً أو الانتقال إلى مرحلة التنفيذ.</li>
+
+                    </li>
+                    <li>وتعتبر دراسات الجدوى الأولية والتفصيلية متكاملة ومتتالية، ولا يمكن الاكتفاء بدراسة واحدة لكي
+                        تكون بديلة عن الدراسة
+                        الأخرى أي ليست معوّضة.</li>
+                    <li>ونتيجة لهذه الدراسة يتم إما التخلي عن المشروع أو البدء بعملية التنفيذ.</li>
+                </ul>
             </div>
             <div class="row-three">
                 <h2>اقرأ المزيد</h2>
                 <div class="row gy-5">
                     <div class="col-lg-6 col-12">
-                        <div class="row-three-block">
-                            <img src="imgs/gallery-info-1.webp" class="img-fluid" alt="img">
-                            <div>
-                                <h5>شركة الغامدي للمقاولات</h5>
-                                <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة
-                                    الحلول التقنية والتسويقية والمتابعة الدورية.</p>
+                        <div class="row-three-block-read-more">
+                            <div class="one-div">
+                                <img src="imgs/read-more-in-blog-1.png" class="img-fluid" alt="img">
+                                <div class="group-buttons">
+                                    <a href="#">تحليل</a>
+                                    <a href="#">تسويق</a>
+                                </div>
                             </div>
-                            <a href="#">اقرأ المزيد</a>
+                            <div class="info-row-three-block-read-more">
+                                <h4>دراسة الجدوى الاقتصادية</h4>
+                                <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص
+                                    حقيقي سيزود لاحقاً، هذا النص هو نص
+                                    تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                                <a href="#">اقرأ المزيد</a>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6 col-12">
-                        <div class="row-three-block">
-                            <img src="imgs/gallery-info-2.webp" class="img-fluid" alt="img">
-                            <div>
-                                <h5>شركة الغامدي للمقاولات</h5>
-                                <p>تم استلام الفكرة من العميل والمساعدة على دراسة الجدوى الاقتصادية والمساعدة بكافة
-                                    الحلول التقنية والتسويقية والمتابعة الدورية.</p>
+                        <div class="row-three-block-read-more">
+                            <div class="one-div">
+                                <img src="imgs/read-more-in-blog-2.png" class="img-fluid" alt="img">
+                                <div class="group-buttons">
+                                    <a href="#">تحليل</a>
+                                    <a href="#">تسويق</a>
+                                </div>
                             </div>
-                            <a href="#">اقرأ المزيد</a>
+                            <div class="info-row-three-block-read-more">
+                                <h4>دراسة الجدوى الاقتصادية</h4>
+                                <p>هذا النص هو نص تجريبي لتعويض نص حقيقي سيزود لاحقاً، هذا النص هو نص تجريبي لتعويض نص
+                                    حقيقي سيزود لاحقاً، هذا النص هو نص
+                                    تجريبي لتعويض نص حقيقي سيزود لاحقاً.</p>
+                                <a href="#">اقرأ المزيد</a>
+                            </div>
                         </div>
                     </div>
                 </div>
