--- a/marketing services.html
+++ b/marketing services.html
@@ -8,6 +8,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&family=Lato&family=Tajawal:wght@400;500;700;800;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - الخدمات التسويقية</title>
@@ -122,14 +124,74 @@
                 </figure>
                 <div>
                     <h3>خدمات الهوية البصرية</h3>
-                    <p>
+                    <p class="p">
                         نحن في مكتب سلسلة للاستشارات نقدم خدمات الهوية البصرية الإبداعية المتكاملة لمساعدتك في بناء
                         علامة تجارية قوية ومميزة.
                         تشمل خدماتنا:
                     </p>
                 </div>
             </div>
-            <h1 class="text-center">HERE I WILL PUT A SLIDER</h1>
+            <section id="testimonial-2">
+                <div class="container">
+                    <div class="swiper mySwiper">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide text-center card-slider">
+                                <i class="fa fa-desktop"></i>
+                                <div>
+                                    <span class="name">تصميم الشعار والعلامة التجارية:</span>
+                                    <p class="desc">
+                                        تصميم شعارات فريدة وعصرية تعكس هوية وقيم عملك. كما نساعدك في تطوير العلامة
+                                        التجارية الخاصة بك بشكل شامل.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide text-center card-slider">
+                                <i class="fa fa-eye"></i>
+                                <div>
+                                    <span class="name">توحيد الهوية البصرية:</span>
+                                    <p class="desc">
+                                        نقوم بتطبيق الهوية البصرية على جميع مخرجات التسويق الخاصة بك، بما في ذلك الموقع
+                                        الإلكتروني والمواد الدعائية والتصاميم
+                                        الأخرى. نهدف إلى تحقيق تجانس واحترافية في جميع جوانب تواجدك الرقمي.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide text-center card-slider">
+                                <i class="fa fa-paperclip"></i>
+                                <div>
+                                    <span class="name">تصميم عناصر التغليف والتعبئة:</span>
+                                    <p class="desc">
+                                        نساعدك في تصميم عبوات وتغليف جذاب ومبتكر لمنتجاتك وخدماتك. نهدف إلى جعل منتجاتك
+                                        تبرز وتلفت الانتباه في السوق.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide text-center card-slider">
+                                <i class="fa fa-camera"></i>
+                                <div>
+                                    <span class="name">التصوير الفوتوغرافي:</span>
+                                    <p class="desc">
+                                        نقدم خدمات التصوير الاحترافي لمنتجاتك وخدماتك، مما يساعد في تعزيز جاذبيتها
+                                        وإبرازها بشكل مميز.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="swiper-slide text-center card-slider">
+                                <i class="fa fa-share"></i>
+                                <div class="text-center">
+                                    <span class="name">تصميم صفحات وأغلفة مواقع التواصل الاجتماعي:</span>
+                                    <p class="desc">
+                                        نساعدك في تصميم صفحات وأغلفة مواقع التواصل الاجتماعي الخاصة بك بطريقة تلفت
+                                        الانتباه وتعكس هوية علامتك التجارية.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+            </section>
+
         </div>
     </section>
 
@@ -187,6 +249,63 @@
                         </p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="testimonial-2" class="manage-social-media">
+        <div class="container">
+            <h2>إدارة منصات التواصل الاجتماعي</h2>
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide text-center card-slider">
+                        <i class="fa fa-desktop"></i>
+                        <div>
+                            <p class="desc">
+                                تصميم شعارات فريدة وعصرية تعكس هوية وقيم عملك. كما نساعدك في تطوير العلامة
+                                التجارية الخاصة بك بشكل شامل.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide text-center card-slider">
+                        <i class="fa fa-eye"></i>
+                        <div>
+                            <p class="desc">
+                                نقوم بتطبيق الهوية البصرية على جميع مخرجات التسويق الخاصة بك، بما في ذلك الموقع
+                                الإلكتروني والمواد الدعائية والتصاميم
+                                الأخرى. نهدف إلى تحقيق تجانس واحترافية في جميع جوانب تواجدك الرقمي.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide text-center card-slider">
+                        <i class="fa fa-paperclip"></i>
+                        <div>
+                            <p class="desc">
+                                نساعدك في تصميم عبوات وتغليف جذاب ومبتكر لمنتجاتك وخدماتك. نهدف إلى جعل منتجاتك
+                                تبرز وتلفت الانتباه في السوق.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide text-center card-slider">
+                        <i class="fa fa-camera"></i>
+                        <div>
+                            <p class="desc">
+                                نقدم خدمات التصوير الاحترافي لمنتجاتك وخدماتك، مما يساعد في تعزيز جاذبيتها
+                                وإبرازها بشكل مميز.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="swiper-slide text-center card-slider">
+                        <i class="fa fa-share"></i>
+                        <div class="text-center">
+                            <p class="desc">
+                                نساعدك في تصميم صفحات وأغلفة مواقع التواصل الاجتماعي الخاصة بك بطريقة تلفت
+                                الانتباه وتعكس هوية علامتك التجارية.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
@@ -303,7 +422,8 @@
     </div>
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
